avoid any overflow on mobile. closes #495

--- a/css/sass/modules/_page.scss
+++ b/css/sass/modules/_page.scss
@@ -1,3 +1,13 @@
+#page {
+    overflow: hidden;
+}
+
+@include bp(sm) {
+    #page {
+        overflow: auto;
+    }
+}
+
 .gallery-caption,
 .bypostauthor {
 
